<resources>
    <string name="app_name">CalC</string>
    <string name="C">C</string>
    <string name="erase">&lt;</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="adition">+</string>
    <string name="substruction">-</string>
    <string name="equal">=</string>
    <string name="percentage">%</string>
    <string name="dot">.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>






</resources>
